--- a/compose.yaml
+++ b/compose.yaml
@@ -5,5 +5,11 @@ services:
     image: postgres:15.3-alpine
     environment:
       - POSTGRES_PASSWORD=xudjf23adj213
+      - POSTGRES_DB=autowds
     ports:
       - 5432:5432
+    
+  redis:
+    image: redis:7.4.0-alpine
+    ports:
+      - 6379:6379
