--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,6 +17,7 @@ anyhow = "1.0"
 axum-extra = { version = "0.9", features = ["typed-header"] }
 axum-client-ip = "0.6.0"
 axum-valid = "0.19.0"
+problemdetails = {version="0.4",features=["axum"]}
 validator = { version = "0.18", features = ["derive"] }
 jsonwebtoken = "8.3"
 pem = "3.0"
