--- a/compose.yaml
+++ b/compose.yaml
@@ -8,6 +8,8 @@ services:
       - POSTGRES_DB=autowds
     ports:
       - 5432:5432
+    volumes:
+      - ./sql:/docker-entrypoint-initdb.d/
     
   redis:
     image: redis:7.4.0-alpine
