--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,7 +14,7 @@ spring-web = "0.4"
 spring-mail = "0.4"
 spring-redis = "0.4"
 spring-sea-orm = { version = "0.4", features = ["postgres", "with-web"] }
-sea-orm = "1.0"
+sea-orm = { version = "1.0", features = ["with-ipnetwork"] }
 serde = "1.0"
 serde_json = "1.0"
 serde_with = "3.14"
