--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,15 +10,16 @@ path = "src/main.rs"
 [dependencies]
 tokio = { version = "1.0", features = ["full"] }
 spring = "0.4"
-spring-web = "0.4"
+spring-web = { version = "0.4", features = ["openapi", "openapi-scalar"] }
 spring-mail = "0.4"
 spring-redis = "0.4"
-spring-sea-orm = { version = "0.4", features = ["postgres", "with-web"] }
+spring-sea-orm = { version = "0.4", features = ["postgres", "with-web", "with-web-openapi"] }
 sea-orm = { version = "1.0", features = ["with-ipnetwork"] }
 serde = "1.0"
 serde_json = "1.0"
 serde_with = "3.14"
 strum = { version = "0.27", features = ["derive"] }
+schemars = { version = "0.9", features = ["derive", "chrono04"] }
 anyhow = "1.0"
 axum-extra = { version = "0.10", features = ["typed-header"] }
 axum-client-ip = "1.1"
