--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,7 +13,13 @@ spring = "0.4"
 spring-web = { version = "0.4", features = ["openapi", "openapi-scalar"] }
 spring-mail = "0.4"
 spring-redis = "0.4"
-spring-sea-orm = { version = "0.4", features = ["postgres", "with-web", "with-web-openapi"] }
+spring-job = { version = "0.4", features = ["postgres_storage"] }
+spring-apalis = { version = "0.4", features = ["redis"] }
+spring-sea-orm = { version = "0.4", features = [
+    "postgres",
+    "with-web",
+    "with-web-openapi",
+] }
 sea-orm = { version = "1.0", features = ["with-ipnetwork"] }
 serde = "1.0"
 serde_json = "1.0"
