--- a/.env
+++ b/.env
@@ -1,1 +1,4 @@
 DATABASE_URL=postgres://postgres:xudjf23adj213@localhost:5432/autowds
+POSTGRES_URL=postgres://postgres:xudjf23adj213@localhost:5432/autowds
+POSTGRES_INIT_METADATA=true
+POSTGRES_INIT_NOTIFICATIONS=true
