--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,7 +25,7 @@ serde = "1.0"
 serde_json = "1.0"
 serde_with = "3.14"
 strum = { version = "0.27", features = ["derive"] }
-schemars = { version = "0.9", features = ["derive", "chrono04"] }
+schemars = { version = "1.1", features = ["derive", "chrono04"] }
 anyhow = "1.0"
 axum-extra = { version = "0.10", features = ["typed-header"] }
 axum-client-ip = "1.1"
@@ -39,5 +39,5 @@ tracing = "0.1"
 rand = "0.9"
 askama = "0.12"
 itertools = "0.14"
-apalis-board-api = { version = "1.0.0-alpha.2", features = ["axum"] }
-apalis-core = { version = "1.0.0-alpha.8" }
+apalis-board-api = { version = "1.0.0-beta.1", features = ["axum"] }
+apalis-core = { version = "1.0.0-beta.2" }
