--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "site"]
 	path = site
 	url = git@github.com:AutoWDS/autowds-site.git
+[submodule "backend"]
+	path = backend
+	url = git@github.com:AutoWDS/react-backend.git
