添加积分控制

--- a/.env
+++ b/.env
@@ -1,4 +1,6 @@
-DATABASE_URL=postgres://postgres:xudjf23adj213@localhost:5432/autowds
-POSTGRES_URL=postgres://postgres:xudjf23adj213@localhost:5432/autowds
+# DATABASE_URL=postgres://postgres:xudjf23adj213@localhost:5432/autowds
+# POSTGRES_URL=postgres://postgres:xudjf23adj213@localhost:5432/autowds
+DATABASE_URL=postgres://postgres:3e7f5e08c34b0c860@localhost:5432/autowds
+POSTGRES_URL=postgres://postgres:3e7f5e08c34b0c860@localhost:5432/autowds
 POSTGRES_INIT_METADATA=true
 POSTGRES_INIT_NOTIFICATIONS=true
