--- a/Cargo.toml
+++ b/Cargo.toml
@@ -41,3 +41,10 @@ askama = "0.12"
 itertools = "0.14"
 apalis-board-api = { version = "1.0.0-beta.1", features = ["axum"] }
 apalis-core = { version = "1.0.0-beta.2" }
+
+# 支付相关依赖
+alipay_sdk_rust = "1"
+wechat-pay-rust-sdk = "0.2"
+derive_more = { version = "1.0", features = ["deref"] }
+chrono = { version = "0.4", features = ["serde"] }
+serde_urlencoded = "0.7"
