--- a/Cargo.toml
+++ b/Cargo.toml
@@ -29,7 +29,7 @@ schemars = { version = "1.1", features = ["derive", "chrono04"] }
 anyhow = "1.0"
 axum-extra = { version = "0.10", features = ["typed-header"] }
 axum-client-ip = "1.1"
-axum-valid = "0.24.0"
+axum-valid = { version = "0.24.0", features = ["aide"] }
 problemdetails = { version = "0.6", features = ["axum"] }
 validator = { version = "0.20", features = ["derive"] }
 jsonwebtoken = "9.3"
@@ -44,7 +44,10 @@ apalis-core = { version = "1.0.0-beta.2" }
 
 # 支付相关依赖
 alipay_sdk_rust = "1"
-wechat-pay-rust-sdk = {version="0.2", features = ["async"]}
+wechat-pay-rust-sdk = { version = "0.2", features = ["async"] }
 derive_more = { version = "1.0", features = ["deref"] }
 chrono = { version = "0.4", features = ["serde"] }
 serde_urlencoded = "0.7"
+
+[patch.crates-io]
+axum_valid = { git = "https://github.com/holmofy/axum_valid", branch = "patch-1" }
