chore(deps): upgrade dependencies and add new packages
- Update getrandom from 0.2.16 to 0.2.17
- Update axum-extra from 0.12.1 to 0.12.5
- Update indexmap from 2.12.0 to 2.13.0
- Update schemars from 1.1.0 to 1.2.0
- Update syn from 2.0.109 to 2.0.114 across multiple crates
- Upgrade apalis from 0.7.3 to 1.0.0-rc.2 with refactored dependencies
- Add apalis-board, apalis-board-api, apalis-board-types, apalis-board-web, and apalis-codec packages
- Update apalis-redis from 0.7.3 to 1.0.0-rc.2 with new dependencies
- Update arc-swap from 1.7.1 to 1.8.0
- Update async-compression from 0.4.32 to 0.4.37
- Add async-lock 3.4.2 and async-once-cell 0.5.4
- Add attribute-derive 0.10.5
- Update JWT utility and task handling code
- Maintain compatibility with updated dependency APIs

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,7 +14,7 @@ spring-web = { version = "0.4", features = ["openapi", "openapi-scalar"] }
 spring-mail = "0.4"
 spring-redis = "0.4"
 spring-job = { version = "0.4", features = ["postgres_storage"] }
-spring-apalis = { version = "0.4", features = ["redis"] }
+spring-apalis = { version = "0.4", features = ["redis", "board", "board-web"] }
 spring-sea-orm = { version = "0.4", features = [
     "postgres",
     "with-web",
@@ -39,8 +39,6 @@ tracing = "0.1"
 rand = "0.9"
 askama = "0.12"
 itertools = "0.14"
-apalis-board-api = { version = "1.0.0-beta.1", features = ["axum"] }
-apalis-core = { version = "1.0.0-beta.2" }
 
 # 支付相关依赖
 alipay_sdk_rust = "1"
